tests/paczka1/small_fuzzy/95795025.err
Error in line 7: laFbB6qP S1o5 4,2
Error in line 5: laFbB6qP S185 69,7
Error in line 9: laFbB6qP A625 8,4
Error in line 13: laFbB6qP S185 58,9
